--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- HTML -->
 
-<link rel="icon" type="image/x-icon" href="/logotipo/Appnow.ico">
+<link rel="icon" type="image/x-icon" href="/Logotipo/Appnow.ico">
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
