--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Descubre y descarga las mejores aplicaciones premium en nuestra tienda. Potencia tu experiencia móvil con herramientas y juegos exclusivos que llevarán tu dispositivo al siguiente nivel. ¡Explora ahora y disfruta de lo mejor en aplicaciones premium!">
 <meta name="keywords" content="Descarga premium, Juegos premium, Herramientas premium, Aplicaciones premium, Aplicaciones hackeadas, Juegos hackeados, Apps, Juegos, Apk, Hack, Premium, AppNow ">
 <meta name="robots" content="index, follow">
+  <meta name="author" content="RaxStuidos">
 
   <title>AppNow</title>
 
