--- a/index.html
+++ b/index.html
@@ -1492,7 +1492,7 @@
   <section class="container">
     <div class="card-per">
       <div class="image">
-        <img src="/images/Colaborador.jpg" alt="" />
+        <img src="images/Colaborador.jpg" alt="" />
       </div>
       <h2>Alan Paliza</h2>
       <p>Hola, mi nombre es Alan paliza, soy un joven desarrollador de páginas web en HTML 5y CSS 3, estoy comprometido a ayudar a personas a mejorar la estética de sus web por medio de HTML. Tengo una experiencia de aproximadamente de 7 meses y ya eh publicado páginas web antes, estoy en continuo aprendizaje propio, y si me necesitas en algún caso no dudes en hablarme! Actualmente estoy estudiando, haci que los únicos días libres son Sábado y domingos! Un cordial saludo y ¡adiós!</p>
@@ -1502,7 +1502,7 @@
     </div>
     <div class="card-per">
       <div class="image">
-        <img src="/images/colaborador2.jpg" alt="" />
+        <img src="images/colaborador2.jpg" alt="" />
       </div>
       <h2>Samuel Aguilar</h2>
       <p>¡Hola! Mi nombre es Samuel, pero puedes llamarme Samy. Tengo 19 años y vivo en la Ciudad de México. Uno de mis pasatiempos favoritos es editar y crear páginas web desde cero. Me apasiona la informática y todas sus ramas. También me encantan los juegos como Minecraft, Among Us y otros. Actualmente, estoy estudiando desarrollo web y aunque llevo aproximadamente 2 años en ello, aún me considero en proceso de aprendizaje.</p>
