--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar">
 
     <div class="logo_item">
-      <img src="/images/Logo.png" alt="">
+      <img src="images/Logo.png" alt="">
       <a id="discord-invi" href="https://discord.gg/gw4ZAsUC" style="font-size: 10px;"><i class="fa-brands fa-discord" style="color: var(--grey-color);  font-size: 15px;"></i></a>
     </div>
 
