--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=6220333487"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', '6220333487');
+</script>
 </head>
 
 <body>
