--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=6220333487"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9VJFN5CHY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-    dataLayer.push(arguments);
-  }
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '6220333487');
+
+  gtag('config', 'G-L9VJFN5CHY');
 </script>
 </head>
 
