fix: Navigation bar error, icon adjustment

--- a/index.html
+++ b/index.html
@@ -5096,9 +5096,7 @@
   <!-- Project -->
   <script src="main.js"></script>
   <script src="popup.js"></script>
-  <script src="ttps://unpkg.com/boxicons@2.1.4/dist/boxicons.js">
-    < /script">
-  </script>
+  <script src="ttps://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   <script src="https://kit.fontawesome.com/7bf7f5d5a4.js" crossorigin="anonymous"></script>
   
 
