--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="descripcion">
     Descubre y descarga las mejores aplicaciones premium en nuestra tienda. Potencia tu experiencia móvil con herramientas y juegos exclusivos que llevarán tu dispositivo al siguiente nivel. ¡Explora ahora y disfruta de lo mejor en aplicaciones premium!
       <br><br><br>
-      <a href="/index.html" class="boton">Entrar</a>
+      <a href="/apps.html" class="boton">Entrar</a>
     
     </p>
   </div>
