--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="keywords" content="Descarga premium, Juegos premium, Herramientas premium, Aplicaciones premium, Aplicaciones hackeadas, Juegos hackeados, Apps, Juegos, Apk, Hack, Premium, AppNow ">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Ghost Studios">
-  
+
   <title>BIENVENIDA A WEBAPPIFY</title>
   <link rel="stylesheet" href="style.css">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon">
-  
+  <script data-cfasync="false" src="//d1on4urq8lvsb1.cloudfront.net/?runod=1020366"></script>
   
 </head>
 
