--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon">
   <script data-cfasync="false" src="//d1on4urq8lvsb1.cloudfront.net/?runod=1020366"></script>
-  
+  <script data-cfasync="false" src="//d1on4urq8lvsb1.cloudfront.net/?runod=1020365"></script>
 </head>
 
 <body>
