--- a/apps.html
+++ b/apps.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
-
+<script data-cfasync="false" src="//d1on4urq8lvsb1.cloudfront.net/?runod=1020365"></script>
 </head>
 
 <body>
