--- a/apps.html
+++ b/apps.html
@@ -23,6 +23,8 @@
   <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 <script data-cfasync="false" src="//d1on4urq8lvsb1.cloudfront.net/?runod=1020365"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
 </head>
 
 <body>
